--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,15 @@
 			<version>3.1.1.RELEASE</version>
 		</dependency>
 		<dependency>
+
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
